--- a/src/styles.css
+++ b/src/styles.css
@@ -1,12 +1,20 @@
-/* styles.css */
+.board-row {
+  display: flex;
+}
+
 .square {
-    background-color: #fff;
-    border: 1px solid #999;
-    font-size: 48px;
-    height: 80px;
-    margin-right: -1px;
-    margin-top: -1px;
-    padding: 0;
-    text-align: center;
-    width: 80px;
-  }
+  width: 60px;
+  height: 60px;
+  margin: 0px;
+  font-size: 24px;
+  font-weight: bold;
+  line-height: 60px;
+  text-align: center;
+  background: #fff;
+  border: 1px solid #999;
+  float: left;
+}
+
+.square:focus {
+  outline: none;
+}
